--- a/src/app/components/thumbnail/event-thumbnail/event-thumbnail.html
+++ b/src/app/components/thumbnail/event-thumbnail/event-thumbnail.html
@@ -9,9 +9,9 @@
         </div>
     }
     
-    @if (showLocation() && worldEvent().location.length > 0) {
+    @if (showLocation() && locationNames.length > 0) {
         <div class="thumbnail-location thumbnail-info">
-            {{ worldEvent().location.join(', ') }}
+            {{ locationNames.join(', ') }}
         </div>
     }
     
