--- a/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
+++ b/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
@@ -1,4 +1,4 @@
-<div class="story-thumbnail world-thumbnail story" [ngClass]="{ 'hasSubstories': worldStory().substories && worldStory().substories.length > 0 }" [routerLink]="['/story', worldStory().id]">
+<div #root class="story-thumbnail world-thumbnail story" [ngClass]="{ 'hasSubstories': worldStory().substories && worldStory().substories.length > 0 }" [routerLink]="['/story', worldStory().id]">
     <div class="thumbnail-header">
         <h4 class="thumbnail-title">{{ worldStory().title }}</h4>
         <button class="thumbnail-delete-button" (click)="deleteStory(worldStory().id, $event)">Delete</button>
@@ -23,7 +23,7 @@
     </div>
 
     @if (substories && substories.length > 0) {
-        <div class="thumbnail-substories">
+        <div #substoriesRow class="thumbnail-substories">
             @for (substory of substories; track substory.id) {
                 <app-substory-thumbnail
                     [substory]="substory">
