Fixed duplicating events

--- a/src/app/details/character-details/character-details.html
+++ b/src/app/details/character-details/character-details.html
@@ -33,7 +33,7 @@
                                 }
                             </select>
                             <input id="character-birth-day" class="primary" type="number" formControlName="characterBirthDay" placeholder="Day" min="1" max="31" />
-                            <button (click)="addCharacterEvent('birth')">Update Timeline</button>
+                            <!-- <button (click)="updateCharacter()">Update Timeline</button> -->
                         </div>
 
                         <label class="primary-label">Deathdate</label>
@@ -46,7 +46,7 @@
                                 }
                             </select>
                             <input id="character-death-day" type="number" formControlName="characterDeathDay" placeholder="Day" min="1" max="31" />
-                            <button (click)="addCharacterEvent('death')">Update Timeline</button>
+                            <!-- <button (click)="updateCharacter()">Update Timeline</button> -->
                         </div>
 
                         <div class="event-thumbnails">
