--- a/src/app/components/thumbnail/character-thumbnail/character-thumbnail.html
+++ b/src/app/components/thumbnail/character-thumbnail/character-thumbnail.html
@@ -11,7 +11,7 @@
 
     @if (showDate() && worldCharacter().birthdate) {
         <div class="thumbnail-info">
-            <strong>Birthdate:</strong> {{ worldCharacter().birthdate }}
+            <strong>Birthdate:</strong> {{ formattedBirthdate }}
         </div>
     }
     
