--- a/src/app/components/thumbnail/event-thumbnail/event-thumbnail.html
+++ b/src/app/components/thumbnail/event-thumbnail/event-thumbnail.html
@@ -5,7 +5,7 @@
     </div>
     @if (showDate()) {
         <div class="thumbnail-date thumbnail-info">
-            {{ worldEvent().date }}
+            {{ formattedDate }}
         </div>
     }
     
