--- a/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
+++ b/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
@@ -3,6 +3,11 @@
         <h4 class="thumbnail-title">{{ worldStory().title }}</h4>
         <button class="thumbnail-delete-button" (click)="deleteStory(worldStory().id, $event)">Delete</button>
     </div>
+    <!-- @if (showDate() && worldStory().date) {
+        <div class="thumbnail-date thumbnail-info">
+            {{ formattedDate }}
+        </div>
+    } -->
     
     @if (showLocation() && locationNames.length > 0) {
         <div class="thumbnail-info thumbnail-location">
