fixing minor stuff + database

--- a/src/app/details/event-details/event-details.html
+++ b/src/app/details/event-details/event-details.html
@@ -11,7 +11,7 @@
 <div class="page-layout">
     <!-- Main Content Area -->
     <div class="main-content">
-        <form [formGroup]="applyForm" (submit)="submitApplication()">
+        <form [formGroup]="applyForm" (submit)="saveEvent()">
             <section class="edit-event-form page-body">
                 <div class="details-section primary-section horizontal-section">
                     <div class="details-section secondary-section">
